[package]
name = "lifeline"
version = "0.1.0"
edition = "2021"

[dependencies]
cc = "1.0.79"
clang = { version = "2.0.0", features = ["clang_10_0"] }
either = "1.8.1"
ena = "0.14.1"
libpcp = "0.7.0"
llvm-sys = "130"
llvm-ir = { version = "0.8.2", features = ["llvm-13"] }
llvm-ir-analysis = { version = "0.3.1", features = ["llvm-13"] }
petgraph = { version = "0.6.3", features = ["stable_graph"] }
uuid = {version = "1.3.0", features=["v4"]}
which = "4.4.0"
